--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1747,220 +1747,8 @@ footer p span {
     width: 100%;
   }
 }
-/* The Modal (background) */
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 99999;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: var(--clr-primary);
-  margin: 5% auto;
-  /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 60%;
-  /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: var(--clr-dark);
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: var(--clr-secondary);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.form {
-  background: var(--clr-primary);
-  padding: 40px;
-  max-width: 600px;
-  margin: 0 auto;
-  border-radius: 1.3rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
-}
-
-.tab-group {
-  list-style: none;
-  padding: 0;
-  margin: 0 0 40px 0;
-}
-
-.tab-group:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.tab-group li a {
-  display: block;
-  text-decoration: none;
-  padding: 15px;
-  background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
-  font-size: 0.8rem;
-  float: left;
-  width: 50%;
-  text-align: center;
-  cursor: pointer;
-  transition: 0.5s ease;
-  border-radius: 0 0.5rem 0.5rem 0;
-}
-
-.sign-up-border a {
-  border-radius: 0.5rem 0 0 0.5rem !important;
-}
-
-.tab-group .active a {
-  background: var(--clr-dark);
-  color: var(--clr-primary);
-  font-weight: 400;
-}
-
-.tab-content > div:last-child {
-  display: none;
-}
-
-.form h3 {
-  text-align: center;
-  color: var(--clr-dark);
-  font-weight: 600;
-  margin: 0 0 40px;
-  font-size: 1.2rem;
-}
-
-.form label {
-  position: absolute;
-  transform: translateY(6px);
-  right: 13px;
-  color: rgba(0, 0, 0, 0.534);
-  transition: all 0.25s ease;
-  -webkit-backface-visibility: hidden;
-  pointer-events: none;
-  font-size: 0.8rem;
-  transition: all 0.3s;
-}
-
-.form label .req {
-  margin: 2px;
-  color: var(--clr-accent);
-}
-
-.form label.active {
-  transform: translateY(50px);
-  left: 2px;
-  font-size: 14px;
-}
-
-.form label.active .req {
-  opacity: 0;
-}
-
-.form label.highlight {
-  color: var(--clr-dark);
-}
-
-.form input, .form textarea {
-  border-radius: 0.5rem;
-  font-size: 0.8rem;
-  display: block;
-  width: 100%;
-  height: 100%;
-  padding: 15px 10px;
-  background: rgba(160, 179, 176, 0.25);
-  background-image: none;
-  border: none;
-  color: var(--clr-dark);
-  border-radius: 0.3rem;
-  transition: border-color 0.25s ease, box-shadow 0.25s ease;
-}
-
-.form input:focus, .form textarea:focus {
-  outline: 0;
-  border: 1px solid transparent;
-  border-color: var(--clr-accent);
-}
-
-.form textarea {
-  border: 2px solid #a0b3b0;
-  resize: vertical;
-}
-
-.field-wrap {
-  position: relative;
-  margin-bottom: 40px;
-}
-
-.top-row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.top-row > div {
-  float: left;
-  width: 48%;
-  margin-right: 4%;
-}
-
-.top-row > div:last-child {
-  margin: 0;
-}
-
-.button {
-  border: 0;
-  outline: none;
-  border-radius: 0.5rem;
-  padding: 15px 0;
-  font-size: 1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  background: var(--clr-secondary);
-  color: #fff;
-  transition: all 0.5s ease;
-  -webkit-appearance: none;
-}
-
-.button:hover, .button:focus {
-  background: var(--clr-accent);
-  color: var(--clr-dark);
-}
-
-.button-block {
-  display: block;
-  width: 100%;
-}
-
-.forgot a {
-  margin-top: -20px;
-  text-align: right;
-  text-decoration: none;
-  color: var(--clr-secondary);
+.login-section {
+  height: 100vh;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
