--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1550,6 +1550,12 @@ footer p span {
     color: var(--clr-dark);
     text-align: center;
 }
+#loginForm input:focus-within {
+    background-color: #fff;
+    border: 1px solid var(--clr-accent);
+    outline: none;
+    box-shadow: none;
+}
 
 
 /* Scroll Bar ----------------------------------------------------------- */
