--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1068,8 +1068,7 @@ footer p span {
 #advertise-consultation-service p,
 #social-media-service p,
 #advertise-campaign-service p,
-#digital-marketing-service p,
-#visual-effects-service p {
+#digital-marketing-service p {
   text-align: justify;
 }
 
@@ -1082,8 +1081,7 @@ footer p span {
 #advertise-consultation-service hr,
 #social-media-service hr,
 #advertise-campaign-service hr,
-#digital-marketing-service hr,
-#visual-effects-service hr {
+#digital-marketing-service hr {
   background-color: var(--clr-accent);
   padding: 3px;
   opacity: 1;
@@ -1099,8 +1097,7 @@ footer p span {
 #advertise-consultation-service hr,
 #social-media-service hr,
 #advertise-campaign-service hr,
-#digital-marketing-service hr,
-#visual-effects-service hr {
+#digital-marketing-service hr {
   background-color: var(--clr-secondary);
 }
 
@@ -1117,9 +1114,16 @@ footer p span {
 .service-description {
   background-color: var(--clr-primary);
   border-radius: 1.3rem;
-  padding: 0.5rem 2rem;
+  padding: 0.2rem 0;
   margin-top: 2.5rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
+  height: 90%;
+  transition: transform 0.3s ease-out;
+}
+
+.service-description:hover {
+  transform: translateY(-8px);
+  transition: transform 0.3s ease-out;
 }
 
 .service-description img {
@@ -1134,16 +1138,31 @@ footer p span {
   text-align: center;
   color: var(--clr-secondary);
   margin: 1rem auto;
+  position: relative;
 }
 
-.service-description p {
-  margin: 1rem 0.5rem;
-  text-align: justify;
+.service-description h5::after {
+  content: "";
+  position: absolute;
+  border-radius: 3px;
+  width: 100%;
+  transform: scaleX(0);
+  height: 3px;
+  bottom: -10px;
+  left: 0;
+  background-color: var(--clr-accent);
+  transform-origin: center;
+  transition: transform 0.3s ease-out;
+}
+
+.service-description:hover h5::after {
+  transform: scaleX(1);
+  transform-origin: left right;
 }
 
 .service-description ul li p {
   word-spacing: normal;
-  font-weight: 600;
+  font-size: 1rem;
 }
 
 .service-description ul {
@@ -1260,7 +1279,8 @@ footer p span {
   border-radius: 1.3rem;
 }
 
-.card .imgBx span .fa-instagram, .card .imgBx span .fa-whatsapp {
+.card .imgBx span .fa-instagram,
+.card .imgBx span .fa-whatsapp {
   color: var(--clr-dark);
 }
 
