--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1198,7 +1198,7 @@ footer p span {
   height: 370px;
   background: var(--clr-primary);
   margin: 0 auto;
-  border-radius: 4px;
+  border-radius: 1.3rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 1.3rem;
   overflow: hidden;
@@ -1212,7 +1212,7 @@ footer p span {
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
+  border-radius: 1.3rem;
   background: #fff;
   transition: all linear 0.3s;
   z-index: -1;
@@ -1264,25 +1264,34 @@ footer p span {
   -o-object-fit: cover;
      object-fit: cover;
   transition: 1s;
-  border-radius: 0.3rem;
+  border-radius: 1rem;
 }
 
 .card .details {
   position: absolute;
   left: 10px;
-  right: 10px;
+  right: 55px;
   bottom: 10px;
   height: 80px;
-  text-align: center;
 }
 
-.card .details h2 {
+.card i {
+  font-size: 2.5rem;
+  color: var(--clr-dark);
+  border-bottom: 3px solid var(--clr-dark);
+  margin-top: 1rem;
+}
+
+.card i:hover {
+  color: var(--clr-secondary);
+  border-color: var(--clr-accent);
+}
+
+.card .details h5 {
   margin: 0;
   padding: 0;
-  font-weight: 600;
-  font-size: 20px;
-  color: #3a3737;
-  text-transform: uppercase;
+  font-size: 1.5rem;
+  color: var(--clr-secondary);
 }
 
 .custom-height {
@@ -1324,6 +1333,26 @@ footer p span {
   opacity: 1;
   border-radius: 0.3rem;
   margin-bottom: 2rem;
+}
+
+.page-content p {
+  text-align: justify;
+}
+
+.about-us-social-icons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.about-us-social-icons i {
+  font-size: 2.5rem;
+  color: var(--clr-dark);
+  border-bottom: 3px solid var(--clr-dark);
+}
+
+.about-us-banner {
+  border-radius: 1.3rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
 }
 
 .project-page-title h3 {
@@ -2110,6 +2139,10 @@ footer p span {
   .icon-pic img,
 .digital-marketing-pic img {
     margin: 2.5rem auto 1rem auto;
+  }
+
+  .aboutUs-custom-hr2 {
+    width: 100% !important;
   }
 }
 /* Tablet Screen -----------------------------------------------*/
