--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1031,7 +1031,7 @@ footer p span {
     height: 370px;
     background: var(--clr-primary);
     margin: 0 auto;
-    border-radius: 4px;
+    border-radius: 1.3rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 1.3rem;
     overflow: hidden;
@@ -1044,7 +1044,7 @@ footer p span {
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 4px;
+    border-radius: 1.3rem;
     background: #fff;
     transition: all linear 0.3s;
     z-index: -1;
@@ -1090,24 +1090,30 @@ footer p span {
     height: 100%;
     object-fit: cover;
     transition: 1s;
-    border-radius: 0.3rem;
+    border-radius: 1rem;
 }
 .card .details {
     position: absolute;
     left: 10px;
-    right: 10px;
+    right: 55px;
     bottom: 10px;
     height: 80px;
-    text-align: center;
 }
-
-.card .details h2 {
+.card i {
+    font-size: 2.5rem;
+    color: var(--clr-dark);
+    border-bottom: 3px solid var(--clr-dark);
+    margin-top: 1rem;
+}
+.card i:hover {
+    color: var(--clr-secondary);
+    border-color: var(--clr-accent);
+}
+.card .details h5 {
     margin: 0;
     padding: 0;
-    font-weight: 600;
-    font-size: 20px;
-    color: rgb(58, 55, 55);
-    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: var(--clr-secondary);
 }
 
 // border of the all card
@@ -1150,6 +1156,22 @@ footer p span {
     opacity: 1;
     border-radius: 0.3rem;
     margin-bottom: 2rem;
+}
+.page-content p {
+    text-align: justify;
+}
+.about-us-social-icons {
+    display: flex;
+    justify-content: space-evenly;
+}
+.about-us-social-icons i {
+    font-size: 2.5rem;
+    color: var(--clr-dark);
+    border-bottom: 3px solid var(--clr-dark);
+}
+.about-us-banner {
+    border-radius: 1.3rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
 }
 // Projects Page Style ----------------------------------------------------
 
@@ -1814,7 +1836,9 @@ footer p span {
     .digital-marketing-pic img {
         margin: 2.5rem auto 1rem auto;
     }
-     
+    .aboutUs-custom-hr2 {
+        width: 100% !important;
+    }
 }
 /* Tablet Screen -----------------------------------------------*/
 @media only screen and (min-width: 768px) and (max-width: 991px) {
