--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1035,9 +1035,9 @@ footer p span {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 1.3rem;
     overflow: hidden;
-  }
-  .card:before,
-  .card:after {
+}
+.card:before,
+.card:after {
     content: "";
     position: absolute;
     top: 0;
@@ -1048,16 +1048,16 @@ footer p span {
     background: #fff;
     transition: all linear 0.3s;
     z-index: -1;
-  }
-  .card:hover:before {
+}
+.card:hover:before {
     transform: rotate(20deg);
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-  }
-  .card:hover:after {
+}
+.card:hover:after {
     transform: rotate(10deg);
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-  }
-  .card .imgBx {
+}
+.card .imgBx {
     position: absolute;
     top: 10px;
     left: 10px;
@@ -1067,105 +1067,105 @@ footer p span {
     transition: all linear 0.3s;
     z-index: 1;
     border-radius: 1.3rem;
-  }
-  .card:hover .imgBx {
+}
+.card:hover .imgBx {
     bottom: 100px;
-  }
-  .card:hover .imgBx img {
+}
+.card:hover .imgBx img {
     position: absolute;
     top: 0px;
     right: 0;
     width: 80%;
     height: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     transition: 1s;
     border-radius: 1.3rem;
-  }
-  .card .imgBx img {
+}
+.card .imgBx img {
     position: absolute;
     top: 0px;
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     transition: 1s;
     border-radius: 1rem;
-  }
-  .card .details {
+}
+.card .details {
     position: absolute;
     left: 10px;
     right: 55px;
     bottom: 10px;
     height: 80px;
-  }
-  .card i {
+}
+.card i {
     font-size: 2.5rem;
     color: var(--clr-dark);
     border-bottom: 3px solid var(--clr-dark);
     border-radius: 0.2rem;
     margin-top: 1rem;
-  }
-  .card i:hover {
+}
+.card i:hover {
     color: var(--clr-secondary);
     border-color: var(--clr-accent);
-  }
-  .card .details h5 {
+}
+.card .details h5 {
     margin: 0;
     padding: 0;
     font-size: 1.5rem;
     color: var(--clr-secondary);
-  }
-  .custom-height {
+}
+.custom-height {
     height: 80%;
-  }
-  .custom-border {
+}
+.custom-border {
     border-radius: 1.3rem;
-  }
-  .card .imgBx span .fa-instagram,
-  .card .imgBx span .fa-whatsapp {
+}
+.card .imgBx span .fa-instagram,
+.card .imgBx span .fa-whatsapp {
     color: var(--clr-dark);
-  }
-  .card .imgBx span i:hover {
+}
+.card .imgBx span i:hover {
     color: black;
-  }
-  .aboutUs-h2-color {
+}
+.aboutUs-h2-color {
     color: var(--clr-secondary);
-  }
-  .card-h2-color2 {
+}
+.card-h2-color2 {
     color: var(--clr-accent);
-  }
-  .aboutUs-custom-hr {
+}
+.aboutUs-custom-hr {
     background-color: var(--clr-accent);
     padding: 3px;
     opacity: 1;
     border-radius: 0.3rem;
     margin-bottom: 2rem;
-  }
-  .aboutUs-custom-hr2 {
+}
+.aboutUs-custom-hr2 {
     background-color: var(--clr-secondary);
     padding: 3px;
     opacity: 1;
     border-radius: 0.3rem;
     margin-bottom: 2rem;
-  }
-  .page-content p {
+}
+.page-content p {
     text-align: justify;
-  }
-  .about-us-social-icons {
+}
+.about-us-social-icons {
     display: flex;
     justify-content: space-evenly;
-  }
-  .about-us-social-icons i {
+}
+.about-us-social-icons i {
     font-size: 2.5rem;
     color: var(--clr-dark);
     border-bottom: 3px solid var(--clr-dark);
     border-radius: 0.2rem;
-  }
-  .about-us-banner {
+}
+.about-us-banner {
     border-radius: 1.3rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
-  }
+}
 
 //pricing page
 
@@ -1638,7 +1638,99 @@ footer p span {
         margin: -8px 5px 0 0;
     }
 }
+// User Profile Page ----------------------------------------------------
+.user-profile-panel {
+    min-height: 100vh;
+    position: relative;
+}
+.nav__cont {
+    position: fixed;
+    width: 3rem;
+    top: 4.1rem;
+    right: 0;
+    min-height: 100vh;
+    z-index: 1;
+    background-color: #fff;
+    overflow: hidden;
+    transition: width 0.3s ease;
+    cursor: pointer;
+    box-shadow: 4px 7px 10px rgba(0, 0, 0, 0.4);
+    color: var(--clr-dark) !important;
+}
+.nav__cont i {
+    font-size: 25px;
+    margin-left: 1rem;
+    margin-right: -1rem;
+}
+.nav__cont:hover {
+    width: 18rem;
+}
+@media screen and (min-width: 600px) {
+    .nav__cont {
+        width: 4rem;
+    }
+}
+.nav__ {
+    list-style-type: none;
+    
+    color: var(--clr-dark);
+}
+.nav__:first-child {
+    padding-top: 2rem;
+}
+.nav___items {
+    padding-bottom: 2rem;
+}
+.nav___items a {
+    position: relative;
+    display: block;
+    top: -25px;
+    right: 15px;
+    padding-left: 15px;
+    padding-right: 25px;
+    transition: all 0.3s ease;
+    margin-left: 10px;
+    margin-right: 25px;
+    text-decoration: none;
+    color: var(--clr-dark);
+    font-weight: 600;
+    font-size: 1rem;
+    z-index: 1000;
+    font-family: 'Vazir';
+    line-height: 2rem;
+}
+.nav___items a:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 2px;
+    background: radial-gradient(
+        circle at 94.02% 88.03%,
+        var(--clr-accent),
+        transparent 100%
+    );
+    opacity: 0;
+    transition: all 0.5s ease;
+    z-index: -10;
+}
+.nav___items:hover a:after {
+    opacity: 1;
+}
+.nav___items i {
+    color: var(--clr-dark);
+    position: relative;
+    cursor: pointer;
+}
 
+.costume-container {
+    padding-left: 5rem;
+    width: 100%;
+    overflow-x: hidden;
+    color: var(--clr-dark);
+}
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
@@ -1832,7 +1924,6 @@ footer p span {
     .digital-marketing-pic img {
         margin: 2.5rem auto 1rem auto;
     }
-     
 }
 /* Tablet Screen -----------------------------------------------*/
 @media only screen and (min-width: 768px) and (max-width: 991px) {
