added order section in profile page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2409,7 +2409,7 @@ footer p span {
   position: relative;
 }
 
-#user-profile ul {
+#dynamic-content ul {
   list-style: none;
 }
 
@@ -2417,8 +2417,8 @@ footer p span {
   height: 10rem;
 }
 
-#user-profile h6 {
-  font-size: 1.2rem;
+#dynamic-content h6 {
+  font-size: 1.1rem;
   margin-top: 1rem;
 }
 
@@ -2427,7 +2427,8 @@ footer p span {
   margin-right: 1rem;
 }
 
-#user-profile span {
+#user-profile span,
+#order span {
   display: block;
 }
 
@@ -2440,6 +2441,27 @@ footer p span {
   font-size: 1.3rem;
   left: 3.5rem;
   display: inline-block;
+}
+
+#order ul {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+#order a {
+  text-decoration: none;
+  color: var(--clr-secondary);
+  font-weight: 600;
+}
+
+.order-details:after {
+  font-family: "Font Awesome 5 Free";
+  content: "\f107";
+  color: var(--clr-dark);
+  font-weight: bold;
+  margin-right: 5px;
+  cursor: pointer;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
