--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2073,21 +2073,22 @@ footer p span {
 #user-profile .col-sm-6 {
     position: relative;
 }
-#user-profile ul {
+#dynamic-content ul {
     list-style: none;
 }
 #user-profile li {
     height: 10rem;
 }
-#user-profile h6 {
-    font-size: 1.2rem;
+#dynamic-content h6 {
+    font-size: 1.1rem;
     margin-top: 1rem;
 }
 #user-profile h6,
 #user-profile span {
     margin-right: 1rem;
 }
-#user-profile span {
+#user-profile span,
+#order span {
     display: block;
 }
 #user-profile h6 {
@@ -2098,6 +2099,25 @@ footer p span {
     font-size: 1.3rem;
     left: 3.5rem;
     display: inline-block;
+}
+#order ul {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+#order a {
+    text-decoration: none;
+    color: var(--clr-secondary);
+    font-weight: 600;
+}
+.order-details:after {
+    font-family: "Font Awesome 5 Free";
+        content: "\f107";
+        color: var(--clr-dark);
+        font-weight: bold;
+        // float: right;
+        margin-right: 5px;
+        cursor: pointer;
 }
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
