--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,4 @@
+@import url(https://v1.fontapi.ir/css/Samim);
 @charset "UTF-8";/*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -70,7 +71,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Iranian Sans";
+  font-family: "Samim", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
